gccida/g2/ix86_emit_restore_regs_using_mov
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_emit_restore_regs_using_mov/src/i386.c:4749:21: error: use of undeclared identifier 'machine_mode'
v7 = gen_rtx_MEM( ( machine_mode)v6, pointer); 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_emit_restore_regs_using_mov/src/i386.c:4750:30: error: use of undeclared identifier 'machine_mode'
v8 = adjust_address_1( v7, ( machine_mode)v6, offset, 1, 1); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_emit_restore_regs_using_mov/src/i386.c:4751:21: error: use of undeclared identifier 'machine_mode'
v9 = gen_rtx_REG( ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4), i); 
                    ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_emit_restore_regs_using_mov/src/obj/i386.o] Error 1
